--- a/src/main/resources/templates/landing/index.html
+++ b/src/main/resources/templates/landing/index.html
@@ -95,100 +95,15 @@
 		<div class="container">
 			<div class="services-header">
 				<h2 class="services-heading-text">Explore our wide range of services designed to meet your financial needs</h2>
-				<a class="primary-button" th:href="@{/pricing}">See all service pricing <i class="fa-solid fa-right-long"></i></a>
 			</div>
 			<div class="services-area flex">
-				<div class="services-card flex">
-					<img alt="" th:src="@{/images/landing/manage-customer-service.svg}">
-					<h3>Accounts</h3>
-					<p>Comprehensive accounting solutions to manage your finances efficiently.</p>
+				<div class="services-card flex" th:each="department : ${departments}">
+					<a class="primary-button" th:href="@{/pricing/{departmentId}(departmentId=${department.departmentId})}">
+						<img alt="" th:src="@{${department.imagePath}}">
+						<h3 th:text="${department.name}"></h3>
+					</a>
+					<p th:text="${department.description}"></p>
 				</div>
-				<div class="services-card flex">
-					<img alt="" th:src="@{/images/landing/manage-purchase-service.svg}">
-					<h3>Goods and Services Tax</h3>
-					<p>Seamless GST compliance and filing services.</p>
-				</div>
-				<div class="services-card flex">
-					<img alt="" th:src="@{/images/landing/manage-sale-service.svg}">
-					<h3>Income Tax</h3>
-					<p>Expert assistance with income tax planning and filing.</p>
-				</div>
-				<div class="services-card flex">
-					<img alt="" th:src="@{/images/landing/manage-stock-service.svg}">
-					<h3>Audit</h3>
-					<p>Professional auditing services for accurate financial reporting.</p>
-				</div>
-				<div class="services-card flex">
-					<img alt="" th:src="@{/images/landing/manage-expense-service.svg}">
-					<h3>TDS/TCS Filing</h3>
-					<p>Timely and precise TDS/TCS compliance and filing.</p>
-				</div>
-				<div class="services-card flex">
-					<img alt="" th:src="@{/images/landing/generate-report-service.svg}">
-					<h3>MCA Filing</h3>
-					<p>Efficient management and filing with the Ministry of Corporate Affairs.</p>
-				</div>
-				<div class="services-card flex">
-					<img alt="" th:src="@{/images/landing/manage-customer-service.svg}">
-					<h3>Company Formation</h3>
-					<p>End-to-end assistance in setting up your company.</p>
-				</div>
-				<div class="services-card flex">
-					<img alt="" th:src="@{/images/landing/manage-purchase-service.svg}">
-					<h3>LIC</h3>
-					<p>Life insurance solutions tailored to your needs.</p>
-				</div>
-				<div class="services-card flex">
-					<img alt="" th:src="@{/images/landing/manage-sale-service.svg}">
-					<h3>Mutual Funds</h3>
-					<p>Smart investment options through mutual funds.</p>
-				</div>
-				<div class="services-card flex">
-					<img alt="" th:src="@{/images/landing/manage-stock-service.svg}">
-					<h3>Insurance</h3>
-					<p>Comprehensive insurance services for security and peace of mind.</p>
-				</div>
-			</div>
-		</div>
-	</section>
-	
-	<!-- big features section -->
-	
-	<section class="big-service-section">
-		<div class="container flex big-service-container">
-			<div class="service-img">
-				<img alt="" th:src="@{/images/landing/manage-customer-big-service.png}">
-			</div>
-			<div class="service-desc flex">
-				<h4>Effortless validation for</h4>
-				<h3>Design professionals</h3>
-				<p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful experiences for your employees.</p>
-			</div>
-		</div>
-	</section>
-	
-	<section class="big-service-section">
-		<div class="container flex big-service-container" id="second-big-feature">
-			<div class="service-img">
-				<img alt="" th:src="@{/images/landing/manage-purchases-big-service.png}">
-			</div>
-			<div class="service-desc flex">
-				<h4>Effortless validation for</h4>
-				<h3>Design professionals</h3>
-				<p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful experiences for your employees.</p>
-			</div>
-		</div>
-	</section>
-	
-	<section class="big-service-section">
-		<div class="container flex big-service-container">
-			<div class="service-img">
-				<img alt="" th:src="@{/images/landing/manage-sales-big-service.png}">
-			</div>
-			<div class="service-desc flex">
-				<h4>Effortless validation for</h4>
-				<h3>Design professionals</h3>
-				<p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful experiences for your employees.</p>
 			</div>
 		</div>
 	</section>
