--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -11,6 +11,7 @@
 	<meta content="ie=edge" http-equiv="X-UA-Compatible">
 	<title th:text="${title}">Title</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+<!--	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >-->
 	<link rel="icon" type="image/x-icon" th:href="@{/images/common/taxFM_logo.jpeg}">
 	<link rel="stylesheet" th:href="@{/css/common/common.css}">
 	<link rel="stylesheet" th:href="@{/css/common/media-queries.css}">
@@ -47,6 +48,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 	<link rel="icon" type="image/x-icon" th:href="@{/images/common/taxFM_logo.jpeg}">
 	<link rel="stylesheet" th:href="@{/css/common/common.css}">
 	<link rel="stylesheet" th:href="@{/css/common/media-queries.css}">
@@ -55,6 +57,7 @@
 	<link rel="stylesheet" th:href="@{/css/employees/employees.css}">
 	<link rel="stylesheet" th:href="@{/css/employees/employee.css}">
 	<link rel="stylesheet" th:href="@{/css/customers/customers.css}">
+	<link rel="stylesheet" th:href="@{/css/attendance/attendance.css}">
 </head>
 
 <!-- profile head -->
@@ -95,6 +98,7 @@
 				<li><a class="hover-link" href="#team" sec:authorize="!isAuthenticated()">Our Team</a></li>
 				<li><a class="hover-link" href="#career" sec:authorize="!isAuthenticated()">Career</a></li>
 				<li><a class="hover-link" href="#contact" sec:authorize="!isAuthenticated()">Contact Us</a></li>
+				<li><a class="hover-link" th:href="@{/roles}" sec:authorize="isAuthenticated() and hasAnyRole('ADMIN')">Roles</a></li>
 				<li><a class="hover-link" th:href="@{/employees}" sec:authorize="isAuthenticated() and hasAnyRole('ADMIN', 'SENIOR_ACCOUNTANT')">Employees</a></li>
 				<li><a class="hover-link" th:href="@{/customers}" sec:authorize="isAuthenticated() and hasAnyRole('ADMIN', 'SENIOR_ACCOUNTANT', 'ACCOUNTANT')">Customers</a></li>
 				<li><a class="hover-link" th:href="@{/profile}"
